// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CookieBanner should hide the banner on click 1`] = `
<Memo(CookieBanner)
  render={[Function]}
>
  <Memo(Banner)
    className="cookie-banner"
    component="div"
    open={true}
    position="bottom"
  >
    <div
      className="banner open bottom cookie-banner"
    >
      <Memo(Container)>
        <div
          className="container"
        >
          <Memo(Row)>
            <div
              className="row"
            >
              <Memo(Column)
                xs={10}
              >
                <div
                  className="column xs-10"
                >
                  <p>
                    We use cookies! Roe is awesome
                  </p>
                </div>
              </Memo(Column)>
              <Memo(Column)
                xs={2}
              >
                <div
                  className="column xs-2"
                >
                  <Memo(Button)
                    className="margin-top-base float-right"
                    onClick={[Function]}
                  >
                    <button
                      className="button margin-top-base float-right"
                      onClick={[Function]}
                    >
                      Accept
                    </button>
                  </Memo(Button)>
                </div>
              </Memo(Column)>
            </div>
          </Memo(Row)>
        </div>
      </Memo(Container)>
    </div>
  </Memo(Banner)>
</Memo(CookieBanner)>
`;

exports[`CookieBanner should hide the banner on click 2`] = `
<Memo(CookieBanner)
  render={[Function]}
>
  <Memo(Banner)
    className="cookie-banner"
    component="div"
    open={false}
    position="bottom"
  >
    <div
      className="banner bottom cookie-banner"
    >
      <Memo(Container)>
        <div
          className="container"
        >
          <Memo(Row)>
            <div
              className="row"
            >
              <Memo(Column)
                xs={10}
              >
                <div
                  className="column xs-10"
                >
                  <p>
                    We use cookies! Roe is awesome
                  </p>
                </div>
              </Memo(Column)>
              <Memo(Column)
                xs={2}
              >
                <div
                  className="column xs-2"
                >
                  <Memo(Button)
                    className="margin-top-base float-right"
                    onClick={[Function]}
                  >
                    <button
                      className="button margin-top-base float-right"
                      onClick={[Function]}
                    >
                      Accept
                    </button>
                  </Memo(Button)>
                </div>
              </Memo(Column)>
            </div>
          </Memo(Row)>
        </div>
      </Memo(Container)>
    </div>
  </Memo(Banner)>
</Memo(CookieBanner)>
`;

exports[`CookieBanner should match snapshot and take required render prop 1`] = `
<div
  className="banner open bottom cookie-banner"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="column xs-10"
      >
        <p>
          We use cookies! Roe is awesome
        </p>
      </div>
      <div
        className="column xs-2"
      >
        <button
          className="button margin-top-base float-right"
          onClick={[Function]}
        >
          Accept
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CookieBanner should take an optional position prop 1`] = `
<div
  className="banner open top cookie-banner"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="column xs-10"
      >
        <p>
          We use cookies! Roe is awesome
        </p>
      </div>
      <div
        className="column xs-2"
      >
        <button
          className="button margin-top-base float-right"
          onClick={[Function]}
        >
          Accept
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CookieBanner should take regular element attributes 1`] = `
<div
  className="banner open bottom cookie-banner my-class"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="column xs-10"
      >
        <p>
          We use cookies! Roe is awesome
        </p>
      </div>
      <div
        className="column xs-2"
      >
        <button
          className="button margin-top-base float-right"
          onClick={[Function]}
        >
          Accept
        </button>
      </div>
    </div>
  </div>
</div>
`;
